the properies is working successfully but we have to fix the media handling

--- a/back/templates/emails/verification_email.html
+++ b/back/templates/emails/verification_email.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>تنبيه: تسجيل دخول جديد</title>
+        <title>{{ company_name }} | التحقق من البريد الإلكتروني</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
